Added blue colour to first header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	
 	<body>
-		<h1>This is the first web page</h1>
+		<h1 style = "color:blue">This is the first web page</h1>
 		<h2>It has not much in it!</h2>
 	</body>
 
