--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<h2 >It has not much in it!</h2>
 		<ul>
 			<li>"With great power comes great responsibility." -- Uncle Ben Parker</li>
+			<li>"You can observe a lot by watching." -- Yogi Berra</li>
 		</ul>
 	</body>
 
