--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 			<li>"Example, you know, far outweighs precept." -- Thomas Jefferson</li>
 			<li>"I love deadlines. I love the whooshing sound they make as they go by." -- Douglas Adams</li>
 		    <li>"Man is but the product of his thoughts. What he thinks, he becomes." -- Mahatma Gandhi</li>
+			<li>"Nothing is more dangerous than an idea, whn it's the only one we have." -- Emile Chartier</li>
+	        <li>"Life is a movie. Write your own ending" -- Kermit the Frog</li>
 		</ul>
 	</body>
 
