--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<h1>This is the first web page</h1>
 		<h2 >It has not much in it!</h2>
 		<ul>
+			<li>"You can't depend on your eyes when your imagination is out of focus" -- Mark Twain</li>
 			<li>"With great power comes great responsibility." -- Uncle Ben Parker</li>
 			<li>"You can observe a lot by watching." -- Yogi Berra</li>
 			<li>"Talk is cheap. Show me the code." -- Linus Torvalds</li>
