--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	
 	<body>
-		<h1>This is the first web page</h1>
+		<h1>A Page of Quotations</h1>
 		<h2 >It has not much in it!</h2>
 		<ul>
 			<li>"You can't depend on your eyes when your imagination is out of focus" -- Mark Twain</li>
