--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		    <li>"Man is but the product of his thoughts. What he thinks, he becomes." -- Mahatma Gandhi</li>
 			<li>"Nothing is more dangerous than an idea, whn it's the only one we have." -- Emile Chartier</li>
 	        <li>"Life is a movie. Write your own ending" -- Kermit the Frog</li>
+	        <li>"Live long and prosper" --- Mr Spock</li>
 		</ul>
 	</body>
 
