--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<li>"Nothing is more dangerous than an idea, whn it's the only one we have." -- Emile Chartier</li>
 	        <li>"Life is a movie. Write your own ending" -- Kermit the Frog</li>
 	        <li>"Live long and prosper" --- Mr Spock</li>
+			<li>"It aint over till it's over" -- Yogi Berra</li>
 		</ul>
 	</body>
 
